<resources>
    <string name="app_name">TruckSharingTask</string>
    <string name="username">Username:</string>
    <string name="username_text">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password_text">Password</string>
    <string name="password">Password:</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="create_account">Create account</string>
    <string name="add_image">Add image</string>
    <string name="image">image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="share_image">share image</string>
    <string name="add_delivery">add delivery</string>
    <string name="receiver_name">Receiver name:</string>
    <string name="pickup_location">Pickup location:</string>
    <string name="drop_location">Drop Off location:</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="pickup_date">Pickup date:</string>
    <string name="pickup_time">Pickup time:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="next">Next</string>
    <string name="create_order">Create order</string>
    <string name="other">Other</string>
    <string name="weight">Weight</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="mini_truck">Mini-truck</string>
    <string name="furniture">Furniture</string>
    <string name="dry_goods">Dry goods</string>
    <string name="food">Food</string>
    <string name="building_material">Building material</string>
    <string name="weight_and_dimensions">Weight and dimensions:</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="truck">Truck</string>
    <string name="van">Van</string>
    <string name="refrigerated_truck">Refrigerated truck</string>
    <string name="good_type">Good type</string>
    <string name="good_description"> Good Description</string>
    <string name="from_sender">From sender:</string>
    <string name="call_driver">Call driver</string>
    <string name="pickFrom">Drop Off:</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>
