<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetails">

    <ImageView
        android:id="@+id/orderDetailsImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@drawable/default_img"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/SenderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_sender"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDetailsImageView"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/DateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReceiverTV"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/LocationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_location"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/TimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateTV"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/ReceiverTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SenderTV"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/DescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LocationTV"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/HeightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/WidthTV"
        app:layout_constraintTop_toBottomOf="@+id/GoodTypeTV"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/WidthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightTV"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/GoodTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_type"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/WeightTV"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTV"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/lengthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WidthTV"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/WeightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTV"
        app:layout_constraintVertical_bias="0.11" />

    <Button
        android:id="@+id/callDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_driver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengthTV"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/s2"
        android:text="Order Details"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>