<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newOrderDetails">

    <ScrollView
        android:id="@+id/newDeliveryDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newDeliveryDetailsScrollConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/CreateOrderBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OtherVehicleET"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/newDeliveryDetailOtherGoodEditText"
                android:layout_width="255dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/other"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.214"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoodTypeRG"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <EditText
                android:id="@+id/Weight"
                android:layout_width="132dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/weight"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailWeightDimensionsTextView"
                app:layout_constraintVertical_bias="0.036" />

            <EditText
                android:id="@+id/Width"
                android:layout_width="132dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/width"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.267"
                app:layout_constraintStart_toEndOf="@+id/Weight"
                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailWeightDimensionsTextView"
                app:layout_constraintVertical_bias="0.036" />

            <EditText
                android:id="@+id/Height"
                android:layout_width="132dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/height"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toEndOf="@+id/Length"
                app:layout_constraintTop_toBottomOf="@+id/Width"
                app:layout_constraintVertical_bias="0.022" />

            <EditText
                android:id="@+id/Length"
                android:layout_width="132dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/length"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Weight"
                app:layout_constraintVertical_bias="0.025" />

            <EditText
                android:id="@+id/OtherVehicleET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/other"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.198"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DetailVehicleTypeRG"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:id="@+id/GoodTypeRG"
                android:layout_width="292dp"
                android:layout_height="237dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.267"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailGoodTypeTextView"
                app:layout_constraintVertical_bias="0.031">

                <RadioButton
                    android:id="@+id/FurnitureRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/furniture" />

                <RadioButton
                    android:id="@+id/DryGoodsRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/dry_goods" />

                <RadioButton
                    android:id="@+id/FoodRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/food" />

                <RadioButton
                    android:id="@+id/BuildingMaterialRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/building_material" />

                <RadioButton
                    android:id="@+id/OtherGoodRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:minHeight="48dp"
                    android:text="@string/other"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/DetailVehicleTypeRG"
                android:layout_width="279dp"
                android:layout_height="246dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.269"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailVehicleTypeTextView"
                app:layout_constraintVertical_bias="0.205">

                <RadioButton
                    android:id="@+id/TruckRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/truck" />

                <RadioButton
                    android:id="@+id/VanRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/van" />

                <RadioButton
                    android:id="@+id/RefrigeratedTruckRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/refrigerated_truck" />

                <RadioButton
                    android:id="@+id/MiniTruckRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/mini_truck" />

                <RadioButton
                    android:id="@+id/OtherVehicleRBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

            <TextView
                android:id="@+id/newDeliveryDetailGoodTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_type"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.121"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/newDeliveryDetailWeightDimensionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_and_dimensions"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.201"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailOtherGoodEditText"
                app:layout_constraintVertical_bias="0.09" />

            <TextView
                android:id="@+id/newDeliveryDetailVehicleTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Length"
                app:layout_constraintVertical_bias="0.134" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>